--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
     --fs-h3: 1.25rem;
     --fs-body: 1rem;
 
-    --bs: 0.25em 0.25em 0.75em rgba(0,0,0,.25),
+    --bs: 0.25em 0.25em 0.75em rgba(0,0,0,.55),
         0.125em 0.125em 0.25em rgba(0,0,0,.15);
 
 }
@@ -52,6 +52,35 @@ img{
     display: block;
     max-width: 100%;
 }
+
+strong { font-weight: var(--fw-bold)}
+
+:focus {
+    outline: 3px solid var(--clr-accent);
+    outline-offset: 3px;
+}
+/* Buttons */
+
+.btn {
+    display: inline-block;
+    padding: .5em 2.5em;
+    background: var(--clr-accent);
+    color: var(--clr-dark);
+    text-decoration: none;
+    cursor: pointer;
+    font-size: .8rem;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-weight: var(--fw-bold);
+    transition: transform 200ms ease-in-out;
+    margin-bottom: 4em;
+}
+
+.btn:hover{
+    transform: scale(1.1);
+
+}
+
 /* Typography */
 
 h1,
@@ -72,7 +101,7 @@ h2{
  }
 
  .section__title{
-    margin-bottom: .25em;
+    margin-bottom: .1em;
  }
 
  .section__title--intro {
@@ -143,34 +172,87 @@ h2{
     background-blend-mode: multiply;
     color: var(--clr-light);
     text-align: center;
+    margin-top: 10px;
  }
 
  .section__title--services {
     color: var(--clr-accent);
     position: relative;
+    font-size: var(--fw-bold);
+    padding-top: 5px;
  }
 
  .section__title--services::after{
     content: '';
     display: block;
-    width: 2em;
+    width: 15em;
     height: 1px;
     margin: 0.5em auto 1em;
     background: var(--clr-light);
     opacity: 0.25;
  }
 
- @media (mid-width: 800px) {
+ .services {
+    margin-bottom: 2em;
+ }
+ .service{
+    max-width: 500px;
+    margin: 0 auto;
+ }
+ @media (min-width: 750px) {
     .services {
         display: flex;
-        flex-direction: row;
-        max-width: 1000px;
-        margin: 0 auto;
+        max-width: 800px;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+        
 
     }
 
 .service + .service {
-    margin-left: 2em;
+    margin-left: 1.5em;
+    }
+ }
+
+ .about-me {
+    max-width: 1000px;
+    margin: 0 auto;
+ }
+
+.about-me__img{
+    box-shadow: var(--bs);
 }
+
+ @media(min-width: 600px) {
+    .about-me {
+        display: grid;
+        grid-template-columns: 1fr 200px;
+        grid-template-areas:
+            "title img"
+            "subtitle img"
+            "text img";
+        grid-column-gap: 2em;
+    }
+
+    .section__title--about{
+        grid-area: title;
+    }
+
+    .section__subtitle--about{
+        grid-column: 1/-1;
+        grid-row: 2;
+        position: relative;
+        left: -1em;
+        width: calc(100% + 2em);
+        padding-left: 1em;
+        padding-right: calc(200px + 4em);
+    }
+
+    .about-me__img{
+        grid-area: img;
+        position: relative;
+        z-index: 2;
+    }
  }
  
