--- a/style.css
+++ b/style.css
@@ -172,15 +172,74 @@ h2{
  .nav-link:hover {
     color: var(--clr-accent);
  }
+ .nav-toggle {
+   padding: .5em;
+   background: transparent;
+   border: 0;
+   cursor: pointer;
+   position: aboslute;
+   right: 1em;
+   top: 1em;
+   z-index: 1000;
+ }
+
+ .nav-open .nav {
+   transform: translateX(0);
+}
+
+.nav-open .nav-toggle {
+   position: fixed;
+}
+
+.nav-open .hamburger {
+   transform: rotate(.625turn);
+}
+
+.nav-open .hamburger::before {
+   transform: rotate(90deg) translateX(-6px);
+}
+
+.nav-open .hamburger::after {
+   opacity: 0;
+}
+
+
+
+ .hamburger {
+   display: inline-block;
+   position: relative;
+ }
+ .hamburger,
+ .hamburger::before,
+ .hamburger::after {
+   background: var(--clr-accent);
+   width: 2em;
+   height: 3px;
+   border-radius: 1em;
+   transition: transform 250ms ease-in-out;
+ }
+ 
+ .hamburger::before,
+ .hamburger::after {
+   content: '';
+   position: absolute;
+   left: 0;
+   right: 0;
+ }
+
+ .hamburger::before {top: 6px;}
+ .hamburger::after {bottom: 6px;}
 
  /* Intro Section */
 
  .intro{
     position: relative;
+    padding-top:1em;
  }
 
  .intro__img{
     box-shadow: var(--bs);
+    max-height: 15em;
  }
 
  .section__subtitle--intro {
